--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
 /* Reset.less
  * Props to Eric Meyer (meyerweb.com) for his CSS reset file. We're using an adapted version here	that cuts out some of the reset HTML elements we will never need here (i.e., dfn, samp, etc).
  * ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
-@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,800");
+@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,400i,800&display=swap");
 html,
 body {
   margin: 0;
   padding: 0;
+  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 h1,
 h2,
